--- a/algo_and_ds/stacks_and_queues.ipynb
+++ b/algo_and_ds/stacks_and_queues.ipynb
@@ -1,6 +1,60 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Describe how you could use a single array to implement three stacks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if we specify which stack (0, 1, or 2) the data is for, when adding the data to the array. Adding is just apending. Removing requires copying of the rest of the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str(self.data)\n",
+    "\n",
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.top = None\n",
+    "        \n",
+    "    def push(self, data):\n",
+    "        new_top = Node(data)\n",
+    "        new_top.next = self.top\n",
+    "        self.top = new_top\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        if self.top is None:\n",
+    "            return None\n",
+    "        removed = self.top\n",
+    "        self.top = self.top.next\n",
+    "        return removed.data\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        if self.top is None:\n",
+    "            return None\n",
+    "        return self.top.data\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return self.top is None\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
