Set of stacks problem

--- a/algo_and_ds/stacks_and_queues.ipynb
+++ b/algo_and_ds/stacks_and_queues.ipynb
@@ -121,6 +121,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implement a data structure SetOfStacks, composed of several stacks and create a new stack once the previous one exceeds capacity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SetOfStacks:\n",
+    "    def __init__(self):\n",
+    "        self.stacks_list = []\n",
+    "        self.len_list = []\n",
+    "        self.add_new_stack()\n",
+    "        self.capacity = 3  # Changeable\n",
+    "        \n",
+    "    def add_new_stack(self):\n",
+    "        self.stacks_list.append(Stack())\n",
+    "        self.len_list.append(0)\n",
+    "        \n",
+    "    def remove_top_stack(self):\n",
+    "        self.stacks_list = self.stacks_list[: -1]\n",
+    "        self.len_list = self.len_list[: -1]\n",
+    "    \n",
+    "    def push(self, data):\n",
+    "        self.stacks_list[-1].push(data)\n",
+    "        self.len_list[-1] += 1\n",
+    "        \n",
+    "        if self.len_list[-1] == self.capacity:\n",
+    "            self.add_new_stack()\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        if self.len_list[-1] > 0:\n",
+    "            self.len_list[-1] -= 1\n",
+    "            return self.stacks_list[-1].pop()\n",
+    "        \n",
+    "        if len(self.stacks_list) == 1:  # One stack left, no node left\n",
+    "            return None\n",
+    "        \n",
+    "        self.remove_top_stack()\n",
+    "        return self.pop()\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        i = len(self.stacks_list) - 1\n",
+    "        while i > -1:\n",
+    "            if self.len_list[i] > 0:\n",
+    "                return self.stacks_list[i].peek()\n",
+    "            i -= 1\n",
+    "        return None\n",
+    "    \n",
+    "    def pop_at(self, i):\n",
+    "        return self.stacks_list[i].pop()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = SetOfStacks()\n",
+    "s.push(1)\n",
+    "s.push(2)\n",
+    "s.push(3)\n",
+    "s.push(4)\n",
+    "assert(s.peek() == 4)\n",
+    "assert(s.pop_at(0) == 3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
