Add queue with stacks

--- a/algo_and_ds/stacks_and_queues.ipynb
+++ b/algo_and_ds/stacks_and_queues.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Design a stack with a function, min, which returns the minimum element of the stack with O(1)."
+    "## Design a stack with a function, min, which returns the minimum element of the stack with O(1)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implement a data structure SetOfStacks, composed of several stacks and create a new stack once the previous one exceeds capacity."
+    "## Implement a data structure SetOfStacks, composed of several stacks and create a new stack once the previous one exceeds capacity"
    ]
   },
   {
@@ -175,8 +175,7 @@
     "        return None\n",
     "    \n",
     "    def pop_at(self, i):\n",
-    "        return self.stacks_list[i].pop()\n",
-    "    "
+    "        return self.stacks_list[i].pop()"
    ]
   },
   {
@@ -192,6 +191,68 @@
     "s.push(4)\n",
     "assert(s.peek() == 4)\n",
     "assert(s.pop_at(0) == 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implement a MyQueue class which implements a queue using two stacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyQueue:\n",
+    "    def __init__(self):\n",
+    "        self.s = Stack()\n",
+    "        self.reverse_s = Stack()\n",
+    "        \n",
+    "    def add(self, data):\n",
+    "        self.s.push(data)\n",
+    "        \n",
+    "    def transfer_from_s_to_reverse_s(self):\n",
+    "        while not self.s.is_empty():\n",
+    "            self.reverse_s.push(self.s.pop())\n",
+    "        return\n",
+    "    \n",
+    "    def transfer_from_reverse_s_to_s(self):\n",
+    "        while not self.reverse_s.is_empty():\n",
+    "            self.s.push(self.reverse_s.pop())\n",
+    "        return\n",
+    "    \n",
+    "    def remove(self):\n",
+    "        self.transfer_from_s_to_reverse_s()\n",
+    "        removed = self.reverse_s.pop()\n",
+    "        self.transfer_from_reverse_s_to_s()\n",
+    "        return removed\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        self.transfer_from_s_to_reverse_s()\n",
+    "        top = self.reverse_s.peek()\n",
+    "        self.transfer_from_reverse_s_to_s()\n",
+    "        return top\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return self.s.is_empty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = MyQueue()\n",
+    "q.add(9)\n",
+    "q.add(3)\n",
+    "q.add(5)\n",
+    "assert(q.peek() == 9)\n",
+    "assert(q.remove() == 9)\n",
+    "assert(q.peek() == 3)"
    ]
   },
   {
