MyQueue lazy approach

--- a/algo_and_ds/stacks_and_queues.ipynb
+++ b/algo_and_ds/stacks_and_queues.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyQueue:\n",
+    "class MyQueue_1:\n",
     "    def __init__(self):\n",
     "        self.s = Stack()\n",
     "        self.reverse_s = Stack()\n",
@@ -246,13 +246,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = MyQueue()\n",
+    "q = MyQueue_1()\n",
     "q.add(9)\n",
     "q.add(3)\n",
     "q.add(5)\n",
     "assert(q.peek() == 9)\n",
     "assert(q.remove() == 9)\n",
     "assert(q.peek() == 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyQueue_2:  # Taking a lazy approach, not putting everything back into the original queue every time\n",
+    "    def __init__(self):\n",
+    "        self.newest_ontop = Stack()\n",
+    "        self.oldest_ontop = Stack()\n",
+    "        \n",
+    "    def add(self, data):\n",
+    "        self.newest_ontop.push(data)\n",
+    "        \n",
+    "    def transfer_from_newest_to_oldest(self):\n",
+    "        if not self.oldest_ontop.is_empty():\n",
+    "            return\n",
+    "        \n",
+    "        while not self.newest_ontop.is_empty():\n",
+    "            self.oldest_ontop.push(self.newest_ontop.pop())\n",
+    "        return\n",
+    "    \n",
+    "    def remove(self):\n",
+    "        self.transfer_from_newest_to_oldest()\n",
+    "        return self.oldest_ontop.pop()\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        self.transfer_from_newest_to_oldest()\n",
+    "        return self.oldest_ontop.peek()\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return self.newest_ontop.is_empty() and self.oldest_ontop.is_empty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = MyQueue_2()\n",
+    "q.add(9)\n",
+    "q.add(3)\n",
+    "q.add(5)\n",
+    "assert(q.peek() == 9)\n",
+    "assert(q.remove() == 9)\n",
+    "assert(q.peek() == 3)\n",
+    "assert(q.is_empty() == False)\n",
+    "assert(q.remove())\n",
+    "assert(q.remove())\n",
+    "assert(q.is_empty() == True)"
    ]
   },
   {
