--- a/algo_and_ds/stacks_and_queues.ipynb
+++ b/algo_and_ds/stacks_and_queues.ipynb
@@ -309,6 +309,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a sorted stack so that the smallest items are on the top. Okay to use a temporary stack, but not any other data structure. Methods are: push, pop, peek, is_empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SortedStack(Stack):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "    def push(self, data):\n",
+    "        temp = Stack()\n",
+    "        while (not self.is_empty()) and (self.peek() < data):\n",
+    "            temp.push(self.pop())\n",
+    "        super().push(data)\n",
+    "        while not temp.is_empty():\n",
+    "            super().push(temp.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = SortedStack()\n",
+    "ss.push(4)\n",
+    "ss.push(6)\n",
+    "ss.push(4)\n",
+    "ss.push(9)\n",
+    "assert(ss.peek() == 4)\n",
+    "assert(ss.pop() == 4)\n",
+    "assert(ss.pop() == 4)\n",
+    "assert(ss.pop() == 6)\n",
+    "assert(ss.pop() == 9)\n",
+    "assert(ss.is_empty() == True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
