Animal shelter queue

--- a/algo_and_ds/stacks_and_queues.ipynb
+++ b/algo_and_ds/stacks_and_queues.ipynb
@@ -354,6 +354,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An animal shelter holds dogs and cats, and operates on a \"first in, first out\" basis. People can adopt either 1) the oldest, or 2) the oldest dog or cat. Create a data structure to maintain this system with: enqueue, dequeue_any, dequeue_dog, dequeue_cat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "class Animal:\n",
+    "    def __init__(self, timestamp, kind, animal_id):\n",
+    "        self.timestamp = timestamp\n",
+    "        self.kind = kind  # 'dog' or 'cat'\n",
+    "        self.animal_id = animal_id\n",
+    "        self.next = None\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return('id: {}, kind: {}, timestamp: {}'.format(self.animal_id, self.kind, self.timestamp))\n",
+    "\n",
+    "class AnimalShelter:\n",
+    "    def __init__(self):\n",
+    "        self.current_animal_id = 0\n",
+    "        self.dog_top = None\n",
+    "        self.cat_top = None\n",
+    "    \n",
+    "    def enqueue(self, kind):\n",
+    "        animal = Animal(datetime.now(), kind, self.current_animal_id)\n",
+    "        if kind == 'dog':\n",
+    "            animal.next = self.dog_top\n",
+    "            self.dog_top = animal\n",
+    "        elif kind == 'cat':\n",
+    "            animal.next = self.cat_top\n",
+    "            self.cat_top = animal\n",
+    "        self.current_animal_id += 1\n",
+    "            \n",
+    "    def dequeue_any(self):\n",
+    "        if self.dog_top is None:\n",
+    "            return self.dequeue_cat()\n",
+    "        if self.cat_top is None:\n",
+    "            return self.dequeue_dog()\n",
+    "        \n",
+    "        dog_top_timestamp = self.dog_top.timestamp\n",
+    "        cat_top_timestamp = self.cat_top.timestamp\n",
+    "        if dog_top_timestamp > cat_top_timestamp:\n",
+    "            self.dequeue_dog()\n",
+    "        else:\n",
+    "            self.dequeue_cat()\n",
+    "    \n",
+    "    def dequeue_dog(self):\n",
+    "        to_be_adopted = self.dog_top\n",
+    "        if to_be_adopted is None:\n",
+    "            return\n",
+    "        self.dog_top = self.dog_top.next\n",
+    "        return to_be_adopted\n",
+    "    \n",
+    "    def dequeue_cat(self):\n",
+    "        to_be_adopted = self.cat_top\n",
+    "        if to_be_adopted is None:\n",
+    "            return\n",
+    "        self.cat_top = self.cat_top.next\n",
+    "        return to_be_adopted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Expected 3] id: 3, kind: dog, timestamp: 2018-10-13 19:37:03.637322\n",
+      "[Expected 2] id: 2, kind: cat, timestamp: 2018-10-13 19:37:03.637270\n",
+      "Dequeue top, 3\n",
+      "[Expected 1] id: 1, kind: dog, timestamp: 2018-10-13 19:37:03.637195\n",
+      "[Expected 2] id: 2, kind: cat, timestamp: 2018-10-13 19:37:03.637270\n",
+      "Dequeue top dog, 1\n",
+      "[Expected 0] id: 0, kind: dog, timestamp: 2018-10-13 19:37:03.637120\n",
+      "[Expected None] None\n"
+     ]
+    }
+   ],
+   "source": [
+    "animal_shelter = AnimalShelter()\n",
+    "animal_shelter.enqueue('dog')  # 0\n",
+    "animal_shelter.enqueue('dog')  # 1\n",
+    "animal_shelter.enqueue('cat')  # 2\n",
+    "animal_shelter.enqueue('dog')  # 3\n",
+    "print('[Expected 3]', animal_shelter.dog_top)\n",
+    "print('[Expected 2]', animal_shelter.cat_top)\n",
+    "print('Dequeue top, 3')\n",
+    "animal_shelter.dequeue_any()\n",
+    "print('[Expected 1]', animal_shelter.dog_top)\n",
+    "print('[Expected 2]', animal_shelter.cat_top)\n",
+    "print('Dequeue top dog, 1')\n",
+    "animal_shelter.dequeue_dog()\n",
+    "print('[Expected 0]', animal_shelter.dog_top)\n",
+    "animal_shelter.dequeue_cat()\n",
+    "print('[Expected None]', animal_shelter.cat_top)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
