--- a/py_tricks/decorator.ipynb
+++ b/py_tricks/decorator.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "source": [
     "## To decorate:\n",
-    "1. Define a decorator above the function you want to decorate\n",
+    "1. Define a decorator (This is a function that takes another function as an argument) above the function you want to decorate\n",
     "2. Above the function you want to decorate, add the @ and the decorator name"
    ]
   },
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "--------------------------------------------------\n",
-      "Execution Time: 0:00:00.000009\n",
+      "Execution Time: 0:00:00.000011\n",
       "--------------------------------------------------\n"
      ]
     },
@@ -137,7 +137,7 @@
       "String: \"Today was a good day. Thanks everyone!\"\n",
       "Number: 3,449\n",
       "--------------------------------------------------\n",
-      "Execution Time: 0:00:00.001558\n",
+      "Execution Time: 0:00:00.002607\n",
       "--------------------------------------------------\n"
      ]
     },
@@ -161,7 +161,124 @@
    "metadata": {},
    "source": [
     "# 2) Property Decorator\n",
-    "Reference: https://www.journaldev.com/14893/python-property-decorator"
+    "Reference: https://www.programiz.com/python-programming/property"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Name the fields with an underscore at the start\n",
+    "## 2. Getter\n",
+    "1. Define a method with its name being the field name without an underscore\n",
+    "2. Add **@property** above the method definition\n",
+    "\n",
+    "## 3. Setter\n",
+    "1. Define a method with its name being the field name without an underscore. This takes an argment of what the user tries to set the value of the field to.\n",
+    "2. Add **@[field name without underscore].setter** above the method definition\n",
+    "\n",
+    "## 4. With a real instance, when getting or setting, use the field name without an underscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Fruit:\n",
+    "    def __init__(self, name, yum_score):\n",
+    "        self._name = name\n",
+    "        self._yum_score = yum_score\n",
+    "        \n",
+    "    @property  # Getter for self._name\n",
+    "    def name(self):\n",
+    "        return self._name\n",
+    "    \n",
+    "    @name.setter  # Setter for self._name\n",
+    "    def name(self, name):\n",
+    "        if not isinstance(name, str):  # Error if not a string\n",
+    "            raise ValueError('Not a string')\n",
+    "        self._name = name\n",
+    "        \n",
+    "    @property  # Getter for self._yum_score\n",
+    "    def yum_score(self):\n",
+    "        return self._yum_score\n",
+    "    \n",
+    "    @yum_score.setter  # Setter for self._yum_score\n",
+    "    def yum_score(self, yum_score):\n",
+    "        self._yum_score = int(yum_score)  # Round down to the nearest int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kiwi = Fruit('kiwi', 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kiwi 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kiwi.name, kiwi.yum_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Not a string",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-471cb3b444d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Error when trying to set the name with a non-string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkiwi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m123\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-bbe9356741b3>\u001b[0m in \u001b[0;36mname\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# Error if not a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Not a string'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Not a string"
+     ]
+    }
+   ],
+   "source": [
+    "# Error when trying to set the name with a non-string\n",
+    "kiwi.name = 123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting the score with a decimal. It rounds down to the neareset integer\n",
+    "kiwi.yum_score = 11.2\n",
+    "kiwi.yum_score"
    ]
   },
   {
